refactor: add labels via patch, use common components, add custom kustomization to fork instead

--- a/kubernetes/components/common/kustomization.yaml
+++ b/kubernetes/components/common/kustomization.yaml
@@ -14,4 +14,6 @@ patches:
       - op: add
         path: /metadata/labels/istio-injection
         value: enabled
-
+      - op: add
+        path: /metadata/labels/control-plane
+        value: kubeflow
