--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -3,7 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
+components:
+  - ../../components/common
 resources:
-  - ./namespace.yaml
   - ./gitrepository.yaml
-  - ./ks.yaml
+  - ./manifests/ks.yaml
