--- a/kubernetes/apps/kubeflow/manifests/ks.yaml
+++ b/kubernetes/apps/kubeflow/manifests/ks.yaml
@@ -12,5 +12,6 @@ spec:
     kind: GitRepository
     name: kubeflow-manifests
     namespace: kubeflow
+  targetNamespace: *namespace
   timeout: 5m
   wait: true
