chore: add subPath

--- a/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
@@ -64,6 +64,8 @@ spec:
         enabled: true
         repo: https://github.com/solanyn/airflow-pipelines
         branch: main
+        depth: 1
+        subPath: "dags"
     scheduler:
       enabled: true
     redis:
