chore(airflow): add pushover environment variables, add pip packages

--- a/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
@@ -32,6 +32,8 @@ spec:
         AIRFLOW_ADMIN_FIRST_NAME: "{{ .AIRFLOW_ADMIN_FIRST_NAME }}"
         AIRFLOW_ADMIN_LAST_NAME: "{{ .AIRFLOW_ADMIN_LAST_NAME }}"
         AIRFLOW_ADMIN_PASSWORD: "{{ .AIRFLOW_ADMIN_PASSWORD }}"
+        PUSHOVER_API_TOKEN: "{{ .PUSHOVER_API_TOKEN }}"
+        PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
     - extract:
         key: cloudnative-pg
@@ -39,3 +41,5 @@ spec:
         key: airflow
     - extract:
         key: minio
+    - extract:
+        key: pushover
