--- a/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
@@ -45,6 +45,10 @@ spec:
       - secretRef:
           name: airflow-secret
     workers:
+      extraPipPackages:
+        - beautifulsoup4
+        - httpx
+        - s3fs
       persistence:
         enabled: false
     createUserJob:
