chore: use community airflow helm chart

--- a/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/externalsecret.yaml
@@ -17,21 +17,16 @@ spec:
         INIT_POSTGRES_PASS: "{{ .AIRFLOW_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         connection: "postgresql://{{ .AIRFLOW_POSTGRES_USER }}:{{ .AIRFLOW_POSTGRES_PASSWORD }}@postgres17-rw.database.svc.cluster.local:5432/airflow"
-        webserver-secret-key: "{{ .AIRFLOW_WEBSERVER_SECRET_KEY }}"
-        S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
-        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        AIRFLOW__CORE__LOAD_EXAMPLES: "false"
-        AIRFLOW__CORE__HIDE_SENSITIVE_VAR_CONN_FIELDS: "false"
-        AIRFLOW__CORE__DEFAULT_TIMEZONE: Australia/Sydney
-        AIRFLOW__WEBSERVER__BASE_URL: "https://airflow.goyangi.cloud"
-        AIRFLOW__WEBSERVER__DEFAULT_WRAP: "true"
-        AIRFLOW__WEBSERVER__EXPOSE_CONFIG: "true"
+        AIRFLOW__CORE__FERNET_KEY: "{{ .AIRFLOW_FERNET_KEY }}"
+        AIRFLOW__WEBSERVER__SECRET_KEY: "{{ .AIRFLOW_WEBSERVER_SECRET_KEY }}"
         AIRFLOW_ADMIN_USERNAME: "{{ .AIRFLOW_ADMIN_USERNAME }}"
         AIRFLOW_ADMIN_EMAIL: "{{ .AIRFLOW_ADMIN_EMAIL }}"
         AIRFLOW_ADMIN_FIRST_NAME: "{{ .AIRFLOW_ADMIN_FIRST_NAME }}"
         AIRFLOW_ADMIN_LAST_NAME: "{{ .AIRFLOW_ADMIN_LAST_NAME }}"
         AIRFLOW_ADMIN_PASSWORD: "{{ .AIRFLOW_ADMIN_PASSWORD }}"
+        S3_ENDPOINT_URL: http://minio.default.svc.cluster.local:9000
+        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
         PUSHOVER_API_TOKEN: "{{ .PUSHOVER_API_TOKEN }}"
         PUSHOVER_USER_KEY: "{{ .PUSHOVER_USER_KEY }}"
   dataFrom:
