chore: no substitution on helm values

--- a/kubernetes/apps/data-platform/airflow/app/kustomization.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/kustomization.yaml
@@ -5,3 +5,6 @@ resources:
   - ./externalsecret.yaml
   - ./helmrelease.yaml
   - ./httproute.yaml
+generatorOptions:
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
