chore: no pgbouncer

--- a/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
@@ -147,7 +147,7 @@ spec:
       postgresql:
         enabled: false
       pgbouncer:
-        enabled: true
+        enabled: false
       externalDatabase:
         type: postgres
         host: postgres17-rw.database.svc.cluster.local
