--- a/kubernetes/apps/machine-learning/label-studio/ks.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/ks.yaml
@@ -11,14 +11,11 @@ spec:
       app.kubernetes.io/name: *app
   components:
     - ../../../../components/gatus/guarded
-    - ../../../../components/volsync
   dependsOn:
     - name: cloudnative-pg-cluster
       namespace: database
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
-    - name: volsync
-      namespace: volsync-system
+    - name: minio
+      namespace: default
   interval: 1h
   path: ./kubernetes/apps/machine-learning/label-studio/app
   prune: false
