--- a/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
@@ -11,13 +11,21 @@ spec:
     name: label-studio-secret
     template:
       data:
-        INIT_POSTGRES_DBNAME: label_studio
-        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: "{{ .LABEL_STUDIO_POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .LABEL_STUDIO_POSTGRES_PASSWORD }}"
+        INIT_POSTGRES_DBNAME: &dbName label_studio
+        INIT_POSTGRES_HOST: &dbHost postgres17-rw.database.svc.cluster.local
+        INIT_POSTGRES_USER: &dbUser "{{ .LABEL_STUDIO_POSTGRES_USER }}"
+        INIT_POSTGRES_PASS: &dbPass "{{ .LABEL_STUDIO_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        DJANGO_DB: *dbName
+        POSTGRE_NAME: *dbName
+        POSTGRE_USER: *dbName
+        POSTGRE_PASSWORD: *dbPass
+        POSTGRE_PORT: 5432
+        POSTGRE_HOST: *dbHost
+        MINIO_STORAGE_ACCESS_KEY: &s3Key "{{ .MINIO_ROOT_USER }}"
+        MINIO_STORAGE_SECRET_KEY: &s3Secret "{{ .MINIO_ROOT_PASSWORD }}"
+        MINIO_STORAGE_BUCKET_NAME: label-studio
+        MINIO_STORAGE_ENDPOINT: https://s3.goyangi.cloud
   dataFrom:
     - extract:
         key: cloudnative-pg
