--- a/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
                 spec:
                   httpGet:
                     path: /health
-                    port: *port
+                    port: &port 80
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
