chore: add airflow image

--- a/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
+++ b/kubernetes/apps/data-platform/airflow/app/helmrelease.yaml
@@ -34,6 +34,11 @@ spec:
       retries: 3
   values:
     useStandardNaming: true
+    images:
+      airflow:
+        repository: ghcr.io/solanyn/airflow
+        digest: sha256:b3fb4c22207f5dc0e9e5a1aed6c6f47f65a540b311d05b7a418392ced2286ad6
+        pullPolicy: IfNotPresent
     airflowPodAnnotations:
       reloader.stakater.com/auto: "true"
     data:
