--- a/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
@@ -20,7 +20,7 @@ spec:
         POSTGRE_NAME: *dbName
         POSTGRE_USER: *dbName
         POSTGRE_PASSWORD: *dbPass
-        POSTGRE_PORT: 5432
+        POSTGRE_PORT: "5432"
         POSTGRE_HOST: *dbHost
         MINIO_STORAGE_ACCESS_KEY: &s3Key "{{ .MINIO_ROOT_USER }}"
         MINIO_STORAGE_SECRET_KEY: &s3Secret "{{ .MINIO_ROOT_PASSWORD }}"
