--- a/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/istiod/app/helmrelease.yaml
@@ -33,6 +33,9 @@ spec:
       strategy: rollback
       retries: 3
   values:
+    global:
+      proxy:
+        resources: {}
     meshConfig:
       extensionProviders:
       - name: oauth2-proxy
