--- a/kubernetes/apps/kserve/kserve/app/helmrelease.yaml
+++ b/kubernetes/apps/kserve/kserve/app/helmrelease.yaml
@@ -1,13 +1,19 @@
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/source.toolkit.fluxcd.io/ocirepository_v1beta2.json
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
+apiVersion: source.toolkit.fluxcd.io/v1beta2
+kind: OCIRepository
 metadata:
   name: kserve
 spec:
   interval: 1h
-  type: oci
-  url: oci://ghcr.io/kserve/charts/
+  layerSelector:
+    mediaType: application/vnd.cncf.helm.chart.content.v1.tar+gzip
+    operation: copy
+  ref:
+    tag: v0.14.1
+  url: oci://ghcr.io/kserve/charts/kserve
+  verify:
+    provider: cosign
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/helm.toolkit.fluxcd.io/helmrelease_v2.json
 apiVersion: helm.toolkit.fluxcd.io/v2
@@ -16,14 +22,9 @@ metadata:
   name: kserve
 spec:
   interval: 1h
-  chart:
-    spec:
-      chart: kserve
-      version: 0.12.1
-      sourceRef:
-        kind: HelmRepository
-        name: kserve
-        namespace: kserve
+  chartRef:
+    kind: OCIRepository
+    name: kserve
   install:
     remediation:
       retries: 3
