feat: add internal ingress and external ingress

--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -8,7 +8,9 @@ components:
 resources:
   - ./echo/ks.yaml
   - ./unifi-dns/ks.yaml
+  - ./unifi-ingress-nginx/ks.yaml
   # NOTE: Try multus for IoT VLAN bridging when managed switch, allows hass on VLAN to mDNS cast and as host network
   # - ./multus/ks.yaml
   - ./cloudflare-tunnel/ks.yaml
   - ./cloudflare-dns/ks.yaml
+  - ./cloudflare-ingress-nginx/ks.yaml
