--- a/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
+++ b/kubernetes/apps/default/calibre-web/app/helmrelease.yaml
@@ -63,17 +63,17 @@ spec:
         ports:
           http:
             port: &port 8083
-    route:
+    ingress:
       app:
-        hostnames: ["{{ .Release.Name }}.goyangi.cloud"]
-        parentRefs:
-          - name: internal
-            namespace: kube-system
-            sectionName: https
-        rules:
-          - backendRefs:
-              - name: *app
-                port: *port
+        className: internal
+        hosts:
+          - host: "{{ .Release.Name }}.goyangi.cloud"
+            paths:
+              - path: /
+                pathType: Prefix
+                service:
+                  identifier: app
+                  port: http
     persistence:
       config:
         existingClaim: calibre-web
