chore: add emptyDir

--- a/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
@@ -84,3 +84,6 @@ spec:
           - backendRefs:
               - name: *app
                 port: *port
+    persistence:
+      label-studio:
+        type: emptyDir
