chore: add emptyDir

--- a/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
@@ -85,7 +85,7 @@ spec:
               - name: *app
                 port: *port
     persistence:
-      media:
+      data:
         type: emptyDir
         globalMounts:
-          - path: /label-studio/media
+          - path: /label-studio/data
