chore: add emptyDir

--- a/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/helmrelease.yaml
@@ -88,4 +88,4 @@ spec:
       data:
         type: emptyDir
         globalMounts:
-          - path: /label-studio/data
+          - path: /label-studio/data/media
