--- a/kubernetes/apps/kubeflow/kubeflow/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/kubeflow/app/externalsecret.yaml
@@ -11,16 +11,11 @@ spec:
     name: kubeflow-secret
     template:
       data:
-        INIT_POSTGRES_DBNAME: kubeflow_katib kubeflow_pipelines
-        INIT_POSTGRES_HOST: postgres17-rw.database.svc.cluster.local
-        INIT_POSTGRES_USER: "{{ .KUBEFLOW_POSTGRES_USER }}"
-        INIT_POSTGRES_PASS: "{{ .KUBEFLOW_POSTGRES_PASSWORD }}"
-        INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        KUBEFLOW_POSTGRES_USER: "{{ .KUBEFLOW_POSTGRES_USER }}"
-        KUBEFLOW_POSTGRES_PASSWORD: "{{ .KUBEFLOW_POSTGRES_PASSWORD }}"
+        KUBEFLOW_MARIADB_USER: "{{ .KUBEFLOW_MARIADB_USER }}"
+        KUBEFLOW_MARIADB_PASSWORD: "{{ .KUBEFLOW_MARIADB_PASSWORD }}"
+        AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
   dataFrom:
-    - extract:
-        key: cloudnative-pg
     - extract:
         key: kubeflow
     - extract:
