--- a/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/argo-workflows/app/externalsecret.yaml
@@ -13,11 +13,9 @@ spec:
       data:
         AWS_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        MYSQL_USER: root
-        MYSQL_PASSWORD: "{{ .MYSQL_ROOT_PASSWORD }}"
+        KUBEFLOW_MARIADB_USER: "{{ .KUBEFLOW_MARIADB_USER }}"
+        KUBEFLOW_MARIADB_PASSWORD: "{{ .KUBEFLOW_MARIADB_PASSWORD }}"
   dataFrom:
-    - extract:
-        key: cloudnative-pg
     - extract:
         key: kubeflow
     - extract:
