chore: update env

--- a/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
         INIT_POSTGRES_USER: &dbUser "{{ .LABEL_STUDIO_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: &dbPass "{{ .LABEL_STUDIO_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        DJANGO_DB: *dbName
+        DJANGO_DB: "default"
         POSTGRE_NAME: *dbName
         POSTGRE_USER: *dbName
         POSTGRE_PASSWORD: *dbPass
