--- a/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
+++ b/kubernetes/apps/machine-learning/label-studio/app/externalsecret.yaml
@@ -18,7 +18,7 @@ spec:
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
         DJANGO_DB: "default"
         POSTGRE_NAME: *dbName
-        POSTGRE_USER: *dbName
+        POSTGRE_USER: *dbUser
         POSTGRE_PASSWORD: *dbPass
         POSTGRE_PORT: "5432"
         POSTGRE_HOST: *dbHost
