--- a/kubernetes/apps/istio-system/ingressgateway/app/helmrelease.yaml
+++ b/kubernetes/apps/istio-system/ingressgateway/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: istio-ingress-gateway
+  name: istio-ingressgateway
   namespace: istio-system
 spec:
   interval: 12h
@@ -13,7 +13,7 @@ spec:
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: istio-ingress-gateway
+  name: istio-ingressgateway
 spec:
   interval: 1h
   chart:
@@ -22,7 +22,7 @@ spec:
       version: 1.25.0
       sourceRef:
         kind: HelmRepository
-        name: istio-ingress-gateway
+        name: istio-ingressgateway
         namespace: istio-system
   install:
     remediation:
