--- a/kubernetes/apps/istio-system/ingressgateway/ks.yaml
+++ b/kubernetes/apps/istio-system/ingressgateway/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app istio-ingress-gateway
+  name: &app istio-ingressgateway
   namespace: &namespace istio-system
 spec:
   commonMetadata:
@@ -13,7 +13,7 @@ spec:
     - name: istiod
       namespace: istio-system
   interval: 1h
-  path: ./kubernetes/apps/istio-system/ingress-gateway/app
+  path: ./kubernetes/apps/istio-system/ingressgateway/app
   prune: false
   sourceRef:
     kind: GitRepository
