--- a/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helm/values.yaml
@@ -18,6 +18,7 @@ cluster:
   id: 1
   name: main
 cni:
+  # NOTE:: required for kubeflow/istio integration
   exclusive: false
 dashboards:
   enabled: true
@@ -81,3 +82,6 @@ securityContext:
       - NET_ADMIN
       - SYS_ADMIN
       - SYS_RESOURCE
+# NOTE:: required for kubeflow/istio integration
+socketLB:
+  hostNamespaceOnly: true
